tests/compile_fail/state/wrong_state_enum.stderr
error: implementations of `moku::State` in this module must use only `BlinkyState` as the generic
  --> tests/compile_fail/state/wrong_state_enum.rs:14:10
   |
14 |     impl State<BlonkyState> for Bottom {}
   |          ^^^^^
